--- a/lib/src/main/res/layout/standard_layout.xml
+++ b/lib/src/main/res/layout/standard_layout.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:gravity="center">
 
-        <simple.media.player.view.MySurfaceView
+        <simple.media.player.view.SimpleSurfaceView
             android:id="@+id/surfaceView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -287,7 +287,7 @@
             android:textColor="#ffffff"
             android:textSize="18sp" />
 
-        <simple.media.player.view.SimpleSeekBar
+        <simple.media.player.view.impl.SimpleSeekBar
             android:id="@+id/progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
